# adventofcode

./: .envrc  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  flake.nix  justfile
adventofcode2020/: 2.cpp
meta/cmake/: dev-mode.cmake  install-rules.cmake  prelude.cmake  tidy.cmake  variables.cmake
meta/nix/: packages.nix
meta/nix/dev/: devshell.nix  format.nix
scripts/: download_test.sh
src/2020/: 07.cpp
src/2023/: 25.cpp
src/2024/: 02.cpp  05.cpp  06.cpp  16.cpp  23.cpp  24.cpp
src/2025/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp
src/runner/: main.cpp
